@@ -14,6 +14,7 @@
  - change trunk debian packaging to use pybuild and drop cdbs.
    [Dimitri John Ledkov]
  - SeLinuxGuard: remove invalid check that looked for stat.st_mode in os.lstat.
+ - do not write comments in /etc/timezone (LP: #1341710)
 0.7.5:
  - open 0.7.5
  - Add a debug log message around import failures
